--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -47,7 +47,6 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:enabled="false"
-        weigh
         android:foregroundGravity="center"
         android:gravity="right"
         android:hint="поиск"
@@ -57,9 +56,9 @@
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_alignParentTop="false"
+        android:layout_below="@+id/imageView3"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="198dp"
+        android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/editText"
         app:srcCompat="@android:drawable/ic_menu_search" />
 </RelativeLayout>
