--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/kab2"
     android:screenOrientation="portrait"
-    tools:context=".MainActivity"
-    android:background="@drawable/kab1">
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -20,7 +19,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="241dp"
-        android:background="#DCCE862E"
+        android:background="#DC711878"
         android:foregroundGravity="center"
         android:visibility="visible" />
 
@@ -33,8 +32,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="38dp"
         android:layout_marginTop="82dp"
-        android:background="#DCCE862E"
-        android:foregroundGravity="center" />
+        android:background="#DC711878"
+        android:foregroundGravity="center"
+        app:srcCompat="@drawable/ic_demo2" />
 
     <Button
         android:id="@+id/button"
@@ -45,11 +45,11 @@
         android:layout_alignParentEnd="false"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:background="#FD424242"
+        android:background="#333333"
         android:foregroundGravity="center"
         android:gravity="center"
         android:text="@string/sign"
-        android:textColor="#BEBEBE" />
+        android:textColor="#FF9800" />
 
     <EditText
         android:id="@+id/name"
@@ -95,7 +95,7 @@
         android:layout_marginBottom="204dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/forgot"
-        android:textColor="#F3373635" />
+        android:textColor="#FF9800" />
 
     <Button
         android:id="@+id/button3"
