--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root_element"
     android:background="@drawable/kab2"
     android:screenOrientation="portrait"
     tools:context=".MainActivity">
@@ -37,7 +38,7 @@
         app:srcCompat="@drawable/ic_demo2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSignIn"
         android:layout_width="120dp"
         android:layout_height="30dp"
         android:layout_below="@+id/pass"
@@ -88,7 +89,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/btnSignIn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
@@ -98,7 +99,7 @@
         android:textColor="#FF9800" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnRegister"
         style="@android:style/Widget.Holo.Light.Button.Inset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
