--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp">
+    android:layout_height="match_parent"
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="112dp"
-        app:cardElevation="10dp">
+    app:cardElevation="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="vertical">
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/emailField"
-            android:layout_width="10dp"
-            android:layout_height="53dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:text=""
@@ -76,6 +78,5 @@
             app:met_floatingLabel="highlight"
             app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true" />
-
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
