Design with words

--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -26,7 +26,7 @@
             android:textColorHint="@color/colorPrimaryDark"
             android:textSize="20sp"
 
-            app:met_baseColor="#0056d3"
+            app:met_baseColor="#D8D8D8"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true" />
@@ -42,7 +42,7 @@
             android:textColorHint="@color/colorPrimaryDark"
             android:textSize="20sp"
 
-            app:met_baseColor="#0056d3"
+            app:met_baseColor="#D8D8D8"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true" />
@@ -58,7 +58,7 @@
             android:textColorHint="@color/colorPrimaryDark"
             android:textSize="20sp"
 
-            app:met_baseColor="#0056d3"
+            app:met_baseColor="#D8D8D8"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true" />
@@ -74,7 +74,7 @@
             android:textColorHint="@color/colorPrimaryDark"
             android:textSize="20sp"
 
-            app:met_baseColor="#0056d3"
+            app:met_baseColor="#D8D8D8"
             app:met_floatingLabel="highlight"
             app:met_primaryColor="#982360"
             app:met_singleLineEllipsis="true" />
