--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="241dp"
-        android:background="#DC711878"
+        android:background="#9CFFC396"
         android:foregroundGravity="center"
         android:visibility="visible" />
 
@@ -28,14 +28,41 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="118dp"
-        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="38dp"
         android:layout_marginTop="82dp"
-        android:background="#DC711878"
-        android:foregroundGravity="center"
+        android:adjustViewBounds="false"
+        android:background="#9CFFC396"
+        android:scaleType="centerInside"
         app:srcCompat="@drawable/ic_demo2" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="11dp"
+        android:fontFamily="@font/chonburi"
+        android:text="Langu"
+        android:textColor="#414141"
+        android:textSize="36sp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="127dp"
+        android:layout_marginTop="-20dp"
+        android:fontFamily="@font/chonburi"
+        android:text="app"
+        android:textColor="#414141"
+        android:textSize="30sp" />
 
     <Button
         android:id="@+id/btnSignIn"
