--- a/app/src/main/res/drawable/ic_demo2.xml
+++ b/app/src/main/res/drawable/ic_demo2.xml
@@ -1,14 +1,8 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="234dp"
-    android:height="190dp"
-    android:viewportWidth="234"
-    android:viewportHeight="190">
-  <path
-      android:pathData="M178.7,41.6c-0.3,0.3 -28.6,0.7 -63,0.9 -34.3,0.1 -63,0.5 -63.6,0.9 -1.7,1.1 -1.3,5.7 0.6,7.2 1.5,1.1 13.6,1.3 62.6,1.4l60.7,-0 0,54.9c0,48.6 0.2,55.1 1.6,56.5 2.1,2.1 4,2 6.4,-0.4 2,-2 2,-3.3 2,-60 0,-56.7 0,-58 -2,-60 -2,-2 -4.1,-2.6 -5.3,-1.4z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M80.8,74.5c-0.9,2.1 -0.8,2.8 0.7,4.5 1.7,1.9 3.1,2 28.2,2l26.3,-0 0,20.8 0,20.9 2.4,1.2c1.8,1 2.9,1 4.5,0.2 2.1,-1.1 2.1,-1.7 2.1,-25.6 0,-23.1 -0.1,-24.5 -1.9,-25.5 -1.2,-0.6 -13.1,-1 -31.6,-1l-29.5,-0 -1.2,2.5z"
-      android:fillColor="#000000"
-      android:strokeColor="#00000000"/>
+<vector android:alpha="0.39" android:height="190dp"
+    android:viewportHeight="190" android:viewportWidth="234"
+    android:width="234dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#000000"
+        android:pathData="M178.7,41.6c-0.3,0.3 -28.6,0.7 -63,0.9 -34.3,0.1 -63,0.5 -63.6,0.9 -1.7,1.1 -1.3,5.7 0.6,7.2 1.5,1.1 13.6,1.3 62.6,1.4l60.7,-0 0,54.9c0,48.6 0.2,55.1 1.6,56.5 2.1,2.1 4,2 6.4,-0.4 2,-2 2,-3.3 2,-60 0,-56.7 0,-58 -2,-60 -2,-2 -4.1,-2.6 -5.3,-1.4z" android:strokeColor="#00000000"/>
+    <path android:fillColor="#000000"
+        android:pathData="M80.8,74.5c-0.9,2.1 -0.8,2.8 0.7,4.5 1.7,1.9 3.1,2 28.2,2l26.3,-0 0,20.8 0,20.9 2.4,1.2c1.8,1 2.9,1 4.5,0.2 2.1,-1.1 2.1,-1.7 2.1,-25.6 0,-23.1 -0.1,-24.5 -1.9,-25.5 -1.2,-0.6 -13.1,-1 -31.6,-1l-29.5,-0 -1.2,2.5z" android:strokeColor="#00000000"/>
 </vector>
