Added some comments and login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
         android:textColor="#FF9800" />
 
     <EditText
-        android:id="@+id/name"
+        android:id="@+id/mail"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -74,7 +74,7 @@
         android:id="@+id/pass"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/mail"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:background="#11000000"
@@ -93,7 +93,7 @@
         android:layout_below="@+id/btnSignIn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="204dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/forgot"
