--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:fontFamily="sans-serif-medium"
         android:foregroundGravity="left"
         android:gravity="start"
-        android:hint="@string/name"
+        android:hint="@string/mail"
         android:inputType="textPersonName"
         android:textSize="16dp" />
 
