--- a/app/src/main/res/layout/fragment_tests.xml
+++ b/app/src/main/res/layout/fragment_tests.xml
@@ -6,4 +6,10 @@
     android:background="#FFE9C1"
     >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tests"
+        android:textColor="@android:color/black"/>
+
 </RelativeLayout>
