--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation"
-        android:background="#E8BE7D"
-        />
+        android:background="@color/DarkCream"
+        app:menu="@menu/bottom_navigation" />
 </RelativeLayout>
