--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,13 +41,13 @@
     <Button
         android:id="@+id/btnSignIn"
         android:layout_width="120dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/pass"
         android:layout_alignParentStart="false"
         android:layout_alignParentEnd="false"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:background="#E6333333"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/sign_in_button"
         android:foregroundGravity="center"
         android:gravity="center"
         android:text="@string/sign"
@@ -66,7 +66,7 @@
         android:fontFamily="sans-serif-medium"
         android:foregroundGravity="left"
         android:gravity="start"
-        android:hint="@string/mail"
+        android:hint="@string/email"
         android:inputType="textPersonName"
         android:textSize="16dp" />
 
@@ -93,7 +93,7 @@
         android:layout_below="@+id/btnSignIn"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="204dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/forgot"
