--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,34 +1,230 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFE9C1"
-    >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textColor="@android:color/black"/>
+    android:orientation="vertical"
+    android:background="@color/Cream">
 
     <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="20dp" />
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="false"
+        android:layout_marginLeft="-150dp"
+        android:layout_marginTop="-620dp"
+        app:srcCompat="@drawable/ic_top" />
 
+    <ImageView
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phone"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentEnd="false"
+        android:layout_marginStart="-110dp"
+        android:layout_marginEnd="-90dp"
+        app:srcCompat="@drawable/ic_progress" />
+
+    <ImageView
+        android:id="@+id/bars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-30dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="-4dp"
+        android:layout_marginBottom="-205dp"
+        app:srcCompat="@drawable/ic_bars" />
+
+    <TextView
+        android:id="@+id/lk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="casual"
+        android:text="@string/lk"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp" />
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:rotation="-90"
+        android:src="@drawable/avatar"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="2dp" />
 
     <Button
         android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/profile_image"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="25dp"
-        android:text="Button" />
+        android:layout_marginTop="-25dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/btn_rounded_rounded_corner"
+        android:text="@string/add" />
+
+    <TextView
+        android:id="@+id/Data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/lk"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="35dp"
+        android:text="@string/data"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/Mail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Data"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/email"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Mail"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/phone"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/phone"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/name"
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/circle1"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignTop="@+id/progress"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="75dp"
+        android:layout_toStartOf="@+id/circle2"
+        app:srcCompat="@drawable/ic_circle" />
+
+    <ImageView
+        android:id="@+id/circle2"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignTop="@+id/progress"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="115dp"
+        app:srcCompat="@drawable/ic_circle2" />
+
+    <TextView
+        android:id="@+id/cur_mail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Data"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/phone"
+        android:text="zkonst12@gmail.com"
+        android:textColor="@color/LightGrey"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/cur_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cur_phone"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/phone"
+        android:text="Константин"
+        android:textColor="@color/LightGrey"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/cur_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cur_mail"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/phone"
+        android:text="89645645428"
+        android:textColor="@color/LightGrey"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/cur_tests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cur_phone"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="120dp"
+        android:text="Выполнено заданий"
+        android:textColor="@color/Pink" />
+
+    <TextView
+        android:id="@+id/cur_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cur_phone"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="85dp"
+        android:text="Получено карточек"
+        android:textColor="@color/Pink" />
+
+    <TextView
+        android:id="@+id/num_tests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/circle1"
+        android:layout_alignTop="@+id/circle1"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="25dp"
+        android:text="0"
+        android:textColor="#7C4DFF"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/num_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/circle2"
+        android:layout_alignTop="@+id/circle2"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="25dp"
+        android:text="0"
+        android:textColor="#7C4DFF"
+        android:textSize="24sp" />
 
 </RelativeLayout>
