--- a/app/src/main/res/layout/register_window.xml
+++ b/app/src/main/res/layout/register_window.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    app:cardBackgroundColor="@color/DarkPink"
     app:cardElevation="10dp">
 
         <LinearLayout
@@ -15,68 +15,68 @@
             android:layout_margin="20dp"
             android:orientation="vertical">
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/emailField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textSize="20sp"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/emailField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/mail"
+                    android:inputType="textEmailAddress"
+                    android:text=""
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="20sp"
 
-            app:met_baseColor="#D8D8D8"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="#982360"
-            app:met_singleLineEllipsis="true" />
+                    app:met_baseColor="#EB151414"
+                    app:met_floatingLabel="highlight"
+                    app:met_primaryColor="#982360"
+                    app:met_singleLineEllipsis="true" />
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/passField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textSize="20sp"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/passField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:text=""
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="20sp"
 
-            app:met_baseColor="#D8D8D8"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="#982360"
-            app:met_singleLineEllipsis="true" />
+                    app:met_baseColor="#EB151414"
+                    app:met_floatingLabel="highlight"
+                    app:met_primaryColor="#982360"
+                    app:met_singleLineEllipsis="true" />
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/nameField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/type_your_name"
-            android:inputType="textPersonName"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textSize="20sp"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/nameField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/type_your_name"
+                    android:inputType="textPersonName"
+                    android:text=""
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="20sp"
 
-            app:met_baseColor="#D8D8D8"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="#982360"
-            app:met_singleLineEllipsis="true" />
+                    app:met_baseColor="#EB151414"
+                    app:met_floatingLabel="highlight"
+                    app:met_primaryColor="#982360"
+                    app:met_singleLineEllipsis="true" />
 
-        <com.rengwuxian.materialedittext.MaterialEditText
-            android:id="@+id/phoneField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/type_your_phone"
-            android:inputType="phone"
-            android:text=""
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textSize="20sp"
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/phoneField"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/type_your_phone"
+                    android:inputType="phone"
+                    android:text=""
+                    android:textColor="@color/colorPrimary"
+                    android:textColorHint="@color/colorPrimaryDark"
+                    android:textSize="20sp"
 
-            app:met_baseColor="#D8D8D8"
-            app:met_floatingLabel="highlight"
-            app:met_primaryColor="#982360"
-            app:met_singleLineEllipsis="true" />
-    </LinearLayout>
+                    app:met_baseColor="#EB151414"
+                    app:met_floatingLabel="highlight"
+                    app:met_primaryColor="#982360"
+                    app:met_singleLineEllipsis="true" />
+        </LinearLayout>
 </androidx.cardview.widget.CardView>
