--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abril_fatface</item>
+        <item>@font/aclonica</item>
+        <item>@font/architects_daughter</item>
         <item>@font/biorhyme_extralight</item>
         <item>@font/bungee</item>
         <item>@font/chonburi</item>
