--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="RoundedCornerButton" parent="@style/Widget.AppCompat.Button.Colored">
+        <item name="background">@drawable/btn_rounded_rounded_corner</item>
+        <item name="colorButtonNormal">@color/DarkPink</item>
+        <item name="colorControlHighlight">@color/DarkPink</item>
+    </style>
+
 </resources>
