--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="Grey">#E6333333</color>
     <color name="Orange">#FF9800</color>
     <color name="LightGrey"> #7A7A7A</color>
+    <color name="White">#FFFFFF</color>
 
 </resources>
